Fixed text behind footer

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -15,7 +15,7 @@
   color: white;
   font-family: sans-serif;
   line-height: 1.5;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 
 a {
